--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
