--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-pdf/renderer": "^4.3.1",
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
