--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "apexcharts": "^5.3.6",
     "axios": "^1.12.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
